2000-08-02  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tkTable.c (TableConfigCursor, TableCursorEvent)
	(TableFlashEvent, TableEventProc):
	* generic/tkTableEdit.c (TableDeleteChars, TableInsertChars):
	* generic/tkTableCmds.c (Table_CurvalueCmd): removed INV_FORCE
	from TableRefresh call.  This means more refreshes are delayed.

	* generic/tkTable.c (BUILD_tkTable): corrected EXTERN def'n of
	Init funcs.

2000-08-01  Jeff Hobbs  <hobbs@scriptics.com>

	* library/tkTable.tcl: rewritten to use ::tk::table namespace

	* generic/tkTable.h: added CONSTRAIN and BETWEEN macros to simply
	some MIN/MAX cases.
	* generic/tkTable.c:
	* generic/tkTableCell.c:
	* generic/tkTableCmds.c: updated to use CONSTRAIN/BETWEEN instead
	of MIN(MAX()).

	* generic/tkTable.c (TableRefresh): changed to not do anything
	when coords < 0 are passed in (like asking to refresh non-existent
	active cell).
	(TableEventProc): added (likely redundant) check for xexpose.count
	== 0 before redisplaying in Expose case. (Halpin)

	* generic/tkTable.c (XFillRectangle): added compat XFillRectangle
	to make up for lack of one in Tk8.1.  (Nijtmans)
	(TableAdjustParams): Made -padx and -pady actually work as
	intended for each cell.  This actually affects the default size
	for a table, as more spacing is given to each cell by default.
	Use -padx/y to control this. (Lennard, Hobbs)
	(TableDisplay): removed extra call to TableCellCoords (leftover
	from NO_SPANS).  (Deich)

	* generic/tkTableCmds.c (Table_SelSetCmd): Corrected the selection
	of title cells when only title cells are available. (Brutti)

	* library/tkTable.tcl (tkTableChangeWidth): changed -$a to
	[expr {-$a}]. (Dubiner)
	(tkTableBeginSelect): Changed behavior for extended selectmode to
	select in the topleft title area when appropriate. (Dubiner)
	(tkTableSelectAll): Changed behavior to select *all* cells
	(including title cells) when -selecttitles is 1.

	* demos/loadtable.tcl: corrected to search better in new directory
	structure.
